--- a/js/particlesjs-config.json
+++ b/js/particlesjs-config.json
@@ -1,14 +1,14 @@
 {
   "particles": {
     "number": {
-      "value": 400,
+      "value": 80,
       "density": {
         "enable": true,
         "value_area": 800
       }
     },
     "color": {
-      "value": "#fff"
+      "value": "#efff00"
     },
     "shape": {
       "type": "circle",
@@ -26,8 +26,8 @@
       }
     },
     "opacity": {
-      "value": 0.5,
-      "random": true,
+      "value": 0.809723090737089,
+      "random": false,
       "anim": {
         "enable": false,
         "speed": 1,
@@ -36,26 +36,26 @@
       }
     },
     "size": {
-      "value": 10,
+      "value": 12.02559045649142,
       "random": true,
       "anim": {
         "enable": false,
-        "speed": 40,
+        "speed": 14.617389821424212,
         "size_min": 0.1,
         "sync": false
       }
     },
     "line_linked": {
-      "enable": false,
-      "distance": 500,
+      "enable": true,
+      "distance": 150,
       "color": "#ffffff",
       "opacity": 0.4,
-      "width": 2
+      "width": 1
     },
     "move": {
       "enable": true,
       "speed": 6,
-      "direction": "bottom",
+      "direction": "none",
       "random": false,
       "straight": false,
       "out_mode": "out",
@@ -72,11 +72,11 @@
     "events": {
       "onhover": {
         "enable": true,
-        "mode": "bubble"
+        "mode": "repulse"
       },
       "onclick": {
         "enable": true,
-        "mode": "repulse"
+        "mode": "push"
       },
       "resize": true
     },
@@ -84,14 +84,14 @@
       "grab": {
         "distance": 400,
         "line_linked": {
-          "opacity": 0.5
+          "opacity": 1
         }
       },
       "bubble": {
         "distance": 400,
-        "size": 4,
-        "duration": 0.3,
-        "opacity": 1,
+        "size": 40,
+        "duration": 2,
+        "opacity": 8,
         "speed": 3
       },
       "repulse": {
