--- a/js/particlesjs-config.json
+++ b/js/particlesjs-config.json
@@ -1,19 +1,19 @@
 {
   "particles": {
     "number": {
-      "value": 80,
+      "value": 125,
       "density": {
         "enable": true,
         "value_area": 800
       }
     },
     "color": {
-      "value": "#000000"
+      "value": "#ede4e4"
     },
     "shape": {
       "type": "circle",
       "stroke": {
-        "width": 0,
+        "width": 3,
         "color": "#000000"
       },
       "polygon": {
@@ -26,7 +26,7 @@
       }
     },
     "opacity": {
-      "value": 0.5524033491425908,
+      "value": 0.15232414578222467,
       "random": false,
       "anim": {
         "enable": false,
@@ -36,32 +36,32 @@
       }
     },
     "size": {
-      "value": 5,
+      "value": 7,
       "random": true,
       "anim": {
         "enable": true,
-        "speed": 40,
-        "size_min": 0.1,
-        "sync": false
+        "speed": 12.181158184520175,
+        "size_min": 4.060386061506725,
+        "sync": true
       }
     },
     "line_linked": {
       "enable": true,
-      "distance": 112.2388442605866,
+      "distance": 150,
       "color": "#ffffff",
       "opacity": 0.4,
       "width": 1
     },
     "move": {
       "enable": true,
-      "speed": 6,
+      "speed": 7,
       "direction": "top-right",
       "random": false,
-      "straight": true,
+      "straight": false,
       "out_mode": "out",
       "bounce": false,
       "attract": {
-        "enable": true,
+        "enable": false,
         "rotateX": 600,
         "rotateY": 1200
       }
@@ -75,8 +75,8 @@
         "mode": "repulse"
       },
       "onclick": {
-        "enable": false,
-        "mode": "remove"
+        "enable": true,
+        "mode": "repulse"
       },
       "resize": true
     },
